<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numberPadLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:layout_constraintEnd_toStartOf="@+id/layoutGuideline"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/displayTextView"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/sevenButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eightButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_eight"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toTopOf="parent"  />

    <Button
        android:id="@+id/nineButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toTopOf="parent"  />

    <Button
        android:id="@+id/fourButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/fiveButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_five"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/sixButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <Button
        android:id="@+id/oneButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <Button
        android:id="@+id/twoButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_two"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/threeButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/zeroButton"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/numberPadButtonWidth"
        android:layout_height="@dimen/numberPadButtonHeight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_pad_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoButton" />


</androidx.constraintlayout.widget.ConstraintLayout>

    